<resources>
    <string name="app_name">6 hands</string>

    <!-- activity_auth -->
    <string name="title">Six Hands</string>
    <string name="description">Сервис для безопасной сдачи и аренды недвижимости</string>
    <string name="vk_button">Войти с помощью Вконтакте</string>
    <string name="skip_auth">Пропустить</string>

    <!--activity_main-->

    <string name="nav_profile_title">Профиль</string>
    <string name="nav_list_title">Список</string>
    <string name="nav_map_title">Карта</string>

    <!-- fragment_profile -->
    <string name="change_data">Изменить данные</string>
    <string name="nav_dialog_title">Связь</string>
    <string name="unauthorized_name">Anonymous</string>
    <string name="apartment_description">ЖК \"Да Винчи\" - жилой комплекс бизнес-класса.  Прекрасная квартира с новым ремонтом, выполненным из дорогих европейских, экологически чистых материалов.  В ванной и кухонной зоне теплый пол. Итальянская сантехника и немецкие смесители. На полу ламинат премиум-класса (34 класс стойкости, Бельгия). Панорамные окна. Меняли стеклопакеты на тепло и энергосберегающие.  Кухня выполнена по индивидуальному проекту, оснащена немецкой техникой Bosch и Liebherr.  Есть два больших гардероба (1,5 кв.м для верхней одежды и 6,5 кв.м для основной). Межкомнатные двери - массив (Италия) Освещение на светодиодах.   Есть место в подземном паркинге.  Идеальный вариант для современной и активной семьи.  Закрытая охраняемая территория, двор без машин. Развитая инфраструктура: в доме крупные рестораны, фитнес-клуб, салоны красоты, английский детский сад, школа иностранных языков, банкоматы, химчистки, супермаркеты. Подземный охраняемый паркинг. Рядом с домом новый детский сад (в 10 метрах), элитная лингвистическая гимназия, отделения банков в шаговой доступности, парковая зона с озером в 300 метрах (летом купаются, зимой каток с горкой).  Поблизости огромный парк с вековыми соснами и лыже роллерной трассой. Доступ на территорию дома, паркинг и в подъезд по индивидуальным электронным ключам. Красивая входная группа, в подъезде 3 лифта, OTIS, 4 квартиры на этаже.  Входная дверь премиум-класса с четырёхсторонним запиранием.  Удобное расположение и сообщение с Москвой: Ж/д Станция Баковка в 5 минутах ходьбы от дома. 27 минут до метро Белорусская. Скоро открытие станции метро.  Оперативный показ!!!  Узнайте больше</string>

    <string name="plus_facebook">+   Facebook</string>

    <!--apartment card-->
    <string name="profile_flat_point">.</string>
    <string name="profile_flat_browsings">Просмотров:</string>
    <string name="profile_flat_new_browsings">Новых:</string>
    <string name="profile_flat_edit">Редактировать</string>

</resources>
