<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.profile.ProfileFragment">

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:fontFamily="sans-serif"
        android:textColor="@color/profile_text_color"
        android:textStyle="bold"
        android:lineSpacingExtra="72.5sp"
        android:layout_marginTop="29dp"
        android:layout_marginStart="@dimen/profile_sides_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/unauthorized_name"/>

    <TextView
        android:id="@+id/change_profile_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/profile_change_data_text"
        android:fontFamily="sans-serif"
        android:lineSpacingExtra="76.8sp"
        android:text="@string/change_data"
        android:layout_marginStart="@dimen/profile_sides_margin"
        android:layout_marginTop="8.5dp"
        app:layout_constraintTop_toBottomOf="@id/profile_name"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/profile_pic"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="@dimen/profile_sides_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />



    <ImageView
        android:id="@+id/vk_button"
        android:layout_width="47dp"
        android:layout_height="47dp"
        android:layout_marginTop="9.5dp"
        android:layout_marginStart="@dimen/profile_sides_margin"
        app:layout_constraintTop_toBottomOf="@id/change_profile_data"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/add_facebook_button"
        android:layout_width="150dp"
        android:layout_height="47dp"
        android:background="@drawable/facebook_button_background"
        android:layout_marginStart="3dp"
        android:layout_marginTop="9.5dp"
        android:text="@string/plus_facebook"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/profile_text_color_light"
        app:layout_constraintStart_toEndOf="@id/vk_button"
        app:layout_constraintTop_toBottomOf="@id/change_profile_data"
        />
    
    <android.support.v7.widget.RecyclerView
        android:id="@+id/profile_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/profile_sides_margin"
        android:layout_marginRight="@dimen/profile_sides_margin"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/vk_button"
        app:layout_constraintBottom_toBottomOf="parent">
    </android.support.v7.widget.RecyclerView>
    
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        app:backgroundTint="@color/fab_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>